# terminus

./: Cargo.toml
src/: _.rs  chunk.rs  main.rs  prelude.rs
src/_input/: mod.rs
src/_input/binding/: keyboard.rs
src/_mob/: boid.rs  diet.rs  energy.rs  mod.rs
src/_mob/movement/: mod.rs  pathing.rs
src/_select/: debug.rs  mod.rs
src/_selection/: actions.rs  bindings.rs  mod.rs  movement.rs
src/_utils/: mod.rs
src/camera/: actions.rs  bindings.rs  debug.rs  event.rs  input.rs  mod.rs  startup.rs
src/input/: mod.rs  selector.rs
src/input/binding/: keyboard.rs  mod.rs  mouse_keyboard.rs
src/map/: features.rs  mod.rs
src/mob/: actions.rs  chunk.rs  context.rs  death.rs  debug.rs  digestion.rs  health.rs  mod.rs  movement.rs  pathing.rs  stamina.rs
src/mob/cognition/: context.rs  desires.rs  mod.rs
src/mob/cognition/percept/: hearing.rs  mod.rs  smelling.rs  vision.rs
src/mob/perception/: hearing.rs  mod.rs  smelling.rs  vision.rs
src/select/: mouse.rs  selected.rs
src/selection/: actions.rs  bindings.rs  debug.rs  mod.rs  movement.rs  selector.rs
src/utils/: error.rs  keybindings.rs
