[package]
name = "terminus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"

[toolchain]
channel = "nightly"

[dependencies]
anyhow = "1.0.69"
thiserror = "1.0.39"
bevy = "0.10.0"
bevy_prototype_lyon = "0.8.0"
bevy_prototype_debug_lines = "0.10.1"
derive_more = "0.99.17"
enum-iterator = "1.4.0"
bevy-inspector-egui = "0.18.1"
