[package]
name = "terminus"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[toolchain]
channel = "nightly"

[dependencies]
anyhow = "1.0.69"
thiserror = "1.0.39"
bevy = "0.10.0"
bevy_prototype_lyon = "0.8.0"
bevy_prototype_debug_lines = "0.10.1"
derive_more = "0.99.17"
enum-iterator = "1.4.0"
bevy-inspector-egui = "0.18.1"
rand = "0.8.5"
bird_binding_derive = { git = "https://github.com/ChousX/bird_binding_derive.git", version = "0.1.1" }
bird_binding = { git = "https://github.com/ChousX/bird_binding.git", version = "0.2.0" }

